督办_筛选重置调优,home界面的逻辑调优

--- a/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
@@ -476,7 +476,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="马云" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m4G-6p-jq1">
-                                                            <rect key="frame" x="75" y="41" width="31" height="18"/>
+                                                            <rect key="frame" x="75" y="40" width="31" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -1007,7 +1007,7 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r9n-GL-02x">
-                                        <rect key="frame" x="0.0" y="0.0" width="208" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="44"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XW3-Ze-Ft8">
                                                 <rect key="frame" x="84" y="8" width="40" height="28"/>
@@ -1024,7 +1024,7 @@
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VAa-99-68E">
-                                                <rect key="frame" x="207" y="12" width="1" height="20"/>
+                                                <rect key="frame" x="206" y="12" width="1" height="20"/>
                                                 <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.8980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20" id="p7C-FP-b6q"/>
@@ -1041,7 +1041,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQ2-49-D2p">
-                                        <rect key="frame" x="208" y="0.0" width="207" height="44"/>
+                                        <rect key="frame" x="207" y="0.0" width="207" height="44"/>
                                         <subviews>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5jX-d6-QVF">
                                                 <rect key="frame" x="83" y="8" width="40" height="28"/>
@@ -1211,7 +1211,7 @@
                                                     <rect key="frame" x="0.0" y="174" width="414" height="40"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TOi-65-Ucm">
-                                                            <rect key="frame" x="158" y="5" width="100" height="30"/>
+                                                            <rect key="frame" x="157" y="5" width="100" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="100" id="eeh-HW-dUa"/>
                                                             </constraints>
@@ -1602,9 +1602,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="工单筛选" id="L0L-xZ-jHh"/>
                     <connections>
+                        <outlet property="endTimeBnt" destination="zlh-3z-KkM" id="VBT-2A-TkQ"/>
                         <outlet property="projectTagsHeightContstrain" destination="Bnx-fQ-701" id="m6E-4X-aRk"/>
                         <outlet property="projectTagsView" destination="cDV-Tm-pf4" id="adQ-fm-PEA"/>
                         <outlet property="scrollView" destination="F3j-E8-fmc" id="9So-1f-QXC"/>
+                        <outlet property="startTimeBnt" destination="RIf-59-9xg" id="emh-hq-afj"/>
                         <outlet property="workOrderStatusTagsView" destination="PqC-4C-byT" id="NIX-v2-7za"/>
                         <outlet property="workOrderTipView" destination="tLl-tM-KTT" id="JP5-DN-VcD"/>
                     </connections>
@@ -2183,7 +2185,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pnR-ZP-21N">
-                                            <rect key="frame" x="20" y="60" width="1" height="60"/>
+                                            <rect key="frame" x="20" y="59" width="1" height="60"/>
                                             <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="1" id="uVH-BW-Xln"/>
@@ -2196,7 +2198,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="回访内容: 问题解决了" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUK-gY-Ds2">
-                                            <rect key="frame" x="53" y="90" width="137" height="18"/>
+                                            <rect key="frame" x="53" y="90" width="137" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -2211,7 +2213,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W4b-kz-q4u">
-                                            <rect key="frame" x="17" y="60" width="8" height="8"/>
+                                            <rect key="frame" x="17" y="59" width="8" height="8"/>
                                             <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="8" id="75i-fb-zvw"/>
@@ -2224,7 +2226,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yj6-Od-bl4">
-                                            <rect key="frame" x="20" y="0.0" width="1" height="60"/>
+                                            <rect key="frame" x="20" y="0.0" width="1" height="59"/>
                                             <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="1" id="Y4i-ZJ-nr9"/>
@@ -3369,7 +3371,7 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="125"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="对本次服务感觉如何" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdL-ej-Z7c">
-                                        <rect key="frame" x="139" y="20" width="138" height="18"/>
+                                        <rect key="frame" x="138" y="20" width="138" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.41568627450980389" green="0.41568627450980389" blue="0.41568627450980389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -3400,12 +3402,12 @@
                                         </variation>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apA-j4-904">
-                                        <rect key="frame" x="183" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="182" y="0.0" width="50" height="50"/>
                                         <state key="normal" image="bigstar_normal"/>
                                         <state key="selected" image="bigstar_active"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iez-d5-ab9">
-                                        <rect key="frame" x="45" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="44" y="0.0" width="50" height="50"/>
                                         <state key="normal" image="bigstar_normal"/>
                                         <state key="selected" image="bigstar_active"/>
                                     </button>
