--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/YQPartDataSelect.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/YQPartDataSelect.xib
@@ -20,10 +20,10 @@
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ymk-GQ-jiL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                        <color key="backgroundColor" red="0.50602557429999995" green="0.79368380729999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.19215686269999999" green="0.64705882349999999" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <state key="normal" title="完成">
-                            <color key="titleColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
